--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,14 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  input[type="number"]::-webkit-inner-spin-button,
+ input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
-    opacity: 1;
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
   }
 }
 
